# sense-ai

./: .env.example  .gitignore  Dockerfile.server  README.md  TESTING.md  TEST_RESULTS.md  docker-compose.yml  gateway.yaml  go.mod  go.sum  main.go  policies.yaml  wiki.md
cmd/sense/: main.go
cmd/server/: main.go
docs/: architecture.md  deployment-guide.md
internal/action/: remediate.go
internal/api/: server.go
internal/detector/: endpoint.go  network.go
internal/gateway/: config.go  proxy.go
internal/policy/: engine.go
internal/storage/: db.go
internal/ui/: embed.go
internal/ui/dashboard/: index.html
internal/ui/dashboard/assets/: index-6MyKR6r0.js  index-B24X2IjY.css  index-BuHxig4J.css  index-CME-3AvK.css  index-COTo0-vM.css  index-DYOfEdSq.js  index-vTcMlAyD.js  index-xuolFGxt.js  index.es-Bfdui-Pw.js
internal/ui/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
internal/ui/frontend/src/: Dashboard.tsx  index.css  vite-env.d.ts
internal/ui/frontend/src/components/: ActivityLogView.tsx  CustomTreemapContent.tsx  DrillDownModal.tsx  ErrorBoundary.tsx  ExecutiveDashboardView.tsx  ExportDropdown.tsx  FindingsView.tsx  GatewayConfigEditor.tsx  GatewayView.tsx  GaugeChart.tsx  InsightsPanel.tsx  NetworkMapView.tsx  PoliciesView.tsx  SettingsView.tsx  Sidebar.tsx  Sparkline.tsx  WorldMap.tsx
internal/ui/frontend/src/components/ui/: card.tsx
internal/ui/frontend/src/lib/: analytics.ts  api.ts  executive-insights.ts  insights.ts
internal/ui/frontend/src/types/: index.ts
migrations/: 001_initial_schema.sql
python/: .gitignore  MANIFEST.in  PUBLISHING.md  README.md  policies.yaml  pyproject.toml  setup.py  upload_to_pypi.sh
python/senseai/: __init__.py  binary.py  cli.py  client.py  exceptions.py  server.py
python/tests/: conftest.py  test_binary.py  test_client.py  test_integration.py
scripts/: check-status.sh  start.sh  test_gateway_policy.sh
